<resources>
    <string name="app_name">Calculator</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_student_login">StudentLogin</string>
    <string name="title_activity_teacher_login">TeacherLogin</string>
    <string name="startTest">Begin the Test</string>
    <string name="login">Log In</string>
    <string name="reset">Reset</string>
    <string name="registerMsg">Don\'t have an account yet?</string>
    <string name="forgot">Forgot Password</string>
    <string name="logout">Log Out</string>
    <string name="name">Name</string>
    <string name="testId">Test ID</string>
    <string name="studentInfoReq">Log in below in order to start the test</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_teacher_home_page">TeacherHomePage</string>
    <string name="createTest">Start New Test</string>
    <string name="createCalc">Create a New Calculator</string>
    <string name="welcomeTeacher">Welcome!</string>
    <string name="title_activity_choose_template">ChooseTemplate</string>
    <string name="chooseTemplateMsg">Choose a template to get started.</string>
    <string name="horizontalCalc">Horizontal (max. of 50 buttons)</string>
    <string name="verticalCalc">Vertical (max. of 30 buttons)</string>
    <string name="title_activity_horizontal_calculator">HorizontalCalculator</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="teacher">Teacher</string>
    <string name="calculator">Calculator</string>
    <string name="title_activity_start_new_test">StartNewTest</string>
    <string name="title_activity_edit_button_page">EditButtonPage</string>
    <string name="pickButtonText">Choose a new text for your button</string>
    <string name="equation">f(x) = </string>
    <string name="functionName">Function Name: </string>
    <string name="title_activity_example">example</string>
    <string name="title_activity_test_session">TestSession</string>
    <string name="title_activity_student_test">StudentTest</string>



</resources>
