<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ahadu_000.calculator.EditButtonPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:text="@string/pickButtonText" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_toEndOf="@+id/scrollView" />

    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gridView"
        android:columnWidth="60dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="1dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:choiceMode="singleChoice"
        android:layout_below="@+id/textView15"
        android:layout_toEndOf="@+id/scrollView"
        android:layout_marginTop="62dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/equation"
        android:id="@+id/textView15"
        android:layout_alignTop="@+id/editText9"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:layout_marginTop="104dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/functionName"
        android:id="@+id/textView16"
        android:layout_alignTop="@+id/editText10"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText10"
        android:layout_above="@+id/textView15"
        android:layout_alignEnd="@+id/editText9"
        android:layout_toEndOf="@+id/textView16" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:id="@+id/button12"
        android:layout_below="@+id/editText9"
        android:layout_centerHorizontal="true"
        android:onClick="createFunction"/>

</RelativeLayout>
